--- a/PageObjectModel-master/pom.xml
+++ b/PageObjectModel-master/pom.xml
@@ -9,6 +9,36 @@
 
 	<name>FreeCRMTest</name>
 	<url>http://maven.apache.org</url>
+	
+	<description>Selenium test</description>
+       <build>
+        <!-- Source directory configuration -->
+<!--         <sourceDirectory>src</sourceDirectory> -->
+        <plugins>
+            <!-- Following plugin executes the testng tests -->
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+           </plugin>
+           <!-- // Following plugin executes the testng tests  -->
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.20</version>
+                <configuration>
+                    <!-- Suite testng xml file to consider for test execution -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+           </plugins>
+    </build>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
