--- a/PageObjectModel-master/pom.xml
+++ b/PageObjectModel-master/pom.xml
@@ -33,7 +33,7 @@
                 <configuration>
                     <!-- Suite testng xml file to consider for test execution -->
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>testng_sanity.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
